set up the component testing stage

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,3 +14,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Build
         run: echo "Building..."
+  test-component:
+    needs: build
+    runs-on: ubuntu-latest
+    container: eclipse-temurin:21.0.4_7-jdk
+    steps:
+      - name: Test
+        run: echo "Testing..."
