set up the production deployment stage

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,10 @@ jobs:
     steps:
       - name: deploy
         run: echo "Deploying..."
+  deploy-production:
+    needs: deploy-staging
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - name: deploy
+        run: echo "Deploying..."
