--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,40 @@ jobs:
     runs-on: ubuntu-latest
     environment: staging
     steps:
-      - name: deploy
-        run: echo "Deploying..."
+      - name: Check out the config repository
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.ACTIONS_BOT_TOKEN }}
+          repository: "sdobrovolschi/gitops-argo"
+      - name: Change version
+        uses: mikefarah/yq@v4
+        with:
+          cmd: yq -i '.image.tag = "${{ github.sha }}"' environments/staging/service/version.yaml
+      - name: Commit
+        id: commit
+        run: |
+          git config --local user.email "st.dobrovolschi@gmail.com"
+          git config --local user.name "Stanislav Dobrovolschi"
+          git commit -am "bump service to ${{ github.sha }}"
+          echo "COMMIT_SHA=$(git rev-parse HEAD)" >> "$GITHUB_OUTPUT"
+      - name: Test
+        env:
+          COMMIT_SHA: ${{ steps.commit.outputs.COMMIT_SHA }}
+        run: |
+          echo "The selected color is $COMMIT_SHA"
+      - name: Push
+        uses: ad-m/github-push-action@v0.8.0
+        with:
+          github_token: ${{ secrets.ACTIONS_BOT_TOKEN }}
+          repository: sdobrovolschi/gitops-argo
+      - name: Wait commit status
+        uses: cloudposse/github-action-wait-commit-status@0.2.0
+        with:
+          repository: "sdobrovolschi/gitops-argo"
+          sha: ${{ steps.commit.outputs.COMMIT_SHA }}
+          status: continuous-delivery/test-service
+          expected_state: "success"
+          check-timeout: 300 # 5 min
   deploy-production:
     needs: deploy-staging
     runs-on: ubuntu-latest
